open for tickets
open for tickets

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="claim_limit_ticket">RARE TICKET DROP</string>
     <string name="question_answer">Send answer</string>
     <string name="btn_quiz_string">Enter quiz</string>
+    <string name="google_ad">ca-app-pub-4584326403186551/6192488545</string>
 
 </resources>
