--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,5 +5,6 @@
     <string name="question_answer">Send answer</string>
     <string name="btn_quiz_string">Enter quiz</string>
     <string name="google_ad">ca-app-pub-4584326403186551/6192488545</string>
+    <string name="google_ad_test">ca-app-pub-3940256099942544/5224354917</string>
 
 </resources>
